@@ -37,10 +37,10 @@ languageDefault = en-us
 ; Short-to-long locale/language code.
 codeShortToLong[en] = en-us
 codeShortToLong[da] = da-dk
-; Locales supported and their implementing classes.
-localeToClass[en-us] = "\SimpleComplex\Locale\LocaleEnUs"
-localeToClass[en-gb] = "\SimpleComplex\Locale\LocaleEnGb"
-localeToClass[da-dk] = "\SimpleComplex\Locale\LocaleDaDk"
+; Locales supported and their implementing classes (no leading backslash).
+localeToClass[en-us] = "SimpleComplex\Locale\LocaleEnUs"
+localeToClass[en-gb] = "SimpleComplex\Locale\LocaleEnGb"
+localeToClass[da-dk] = "SimpleComplex\Locale\LocaleDaDk"
 ; Languages supported.
 languages[] = en-us
 languages[] = da-dk
